# offload-samples

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  PREREQUISITES.md  prerequisites.md
common/: CMakeLists.txt  OffloadUtils.cpp  OffloadUtils.hpp
samples/device_query/: CMakeLists.txt  main.cpp
samples/math_test/: CMakeLists.txt  Tester.hpp  UlpDistance.hpp  main.cpp
samples/math_test/device_code/: CMakeLists.txt  MathTest.cpp
samples/simple_kernel/: CMakeLists.txt  main.cpp  simple_kernel.c
samples/simple_kernel/device_code/: CMakeLists.txt  SimpleKernel.cpp
samples/testing/: CMakeLists.txt  main.cpp
samples/testing/common/: CMakeLists.txt  DeviceContext.cpp  DeviceContext.hpp  InputGenerator.hpp  MathTest.hpp  Numerics.hpp  Support.hpp
samples/testing/device_code/: CMakeLists.txt  HelloWorld.cpp
